--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@babel/polyfill": "^7.2.5",
     "body-parser": "^1.18.3",
     "compression": "^1.7.3",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "object-hash": "^1.3.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.2",
