--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,10 @@
 {
   "presets": [
-    "@babel/preset-env"
+    "@babel/preset-env",
+    "@babel/preset-react"
   ],
   "plugins": [
+    "babel-plugin-styled-components",
     ["@babel/plugin-proposal-decorators", {"legacy": true }],
     ["@babel/plugin-proposal-class-properties", {"loose": true }]
   ]
