--- a/.eslintrc
+++ b/.eslintrc
@@ -18,9 +18,13 @@
     }
   },
   "rules": {
+    "function-paren-newline": 0,
     "jsx-a11y/anchor-is-valid": [
       "error",
       {
+        "components": [
+          "Link"
+        ],
         "specialLink": [
           "to"
         ]
