--- a/package.json
+++ b/package.json
@@ -5,11 +5,16 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "cross-env NODE_ENV=development babel-node server"
+    "start": "cross-env NODE_ENV=development nodemon --exec babel-node server"
   },
   "author": "Nickew",
   "license": "ISC",
   "pre-commit": "lint:staged",
+  "nodemonConfig": {
+    "ignore": [
+      "src/*"
+    ]
+  },
   "dependencies": {
     "@babel/polyfill": "^7.2.5",
     "body-parser": "^1.18.3",
@@ -17,9 +22,11 @@
     "express": "^4.16.4",
     "object-hash": "^1.3.1",
     "pg": "^7.10.0",
+    "pg-hstore": "^2.3.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
+    "sequelize": "^5.8.4",
     "styled-components": "^4.2.0"
   },
   "devDependencies": {
@@ -48,6 +55,7 @@
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^4.6.0",
     "node-sass": "^4.9.3",
+    "nodemon": "^1.19.0",
     "rimraf": "^2.6.2",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
