--- a/package.json
+++ b/package.json
@@ -17,16 +17,16 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.2.5",
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.18.3",
     "compression": "^1.7.3",
+    "cookie-parser": "^1.4.4",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
-    "object-hash": "^1.3.1",
     "pg": "^7.10.0",
-    "pg-hstore": "^2.3.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
-    "sequelize": "^5.8.4",
     "styled-components": "^4.2.0"
   },
   "devDependencies": {
