--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "pg": "^7.10.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-modal": "^3.8.1",
     "react-router-dom": "^5.0.0",
     "styled-components": "^4.2.0"
   },
