--- a/package.json
+++ b/package.json
@@ -22,12 +22,16 @@
     "compression": "^1.7.3",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
+    "dotenv": "^8.0.0",
     "express": "^4.16.4",
+    "express-jwt": "^5.3.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^7.10.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-modal": "^3.8.1",
     "react-router-dom": "^5.0.0",
+    "react-toastify": "^5.2.1",
     "styled-components": "^4.2.0"
   },
   "devDependencies": {
