--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,28 @@
 {
-  "presets": [
-    "@babel/preset-env",
-    "@babel/preset-react"
-  ],
+  "presets": [["@babel/preset-env"], "@babel/preset-react"],
   "plugins": [
     "babel-plugin-styled-components",
-    ["@babel/plugin-proposal-decorators", {"legacy": true }],
-    ["@babel/plugin-proposal-class-properties", {"loose": true }]
-  ]
+    [
+      "@babel/plugin-proposal-class-properties",
+      {
+        "loose": true
+      }
+    ]
+  ],
+  "env": {
+    "production": {
+      "only": ["src"],
+      "plugins": [
+        [
+          "transform-react-remove-prop-types",
+          {
+            "mode": "remove",
+            "removeImport": true
+          }
+        ],
+        "@babel/plugin-transform-react-inline-elements",
+        "@babel/plugin-transform-react-constant-elements"
+      ]
+    }
+  }
 }
