--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rimraf build",
-    "start": "cross-env NODE_ENV=development nodemon --exec babel-node server",
+    "start": "cross-env NODE_ENV=development nodemon --exec babel server",
     "build": "cross-env NODE_ENV=production webpack --config internals/webpack/webpack.prod.babel.js"
   },
   "author": "Nickew",
@@ -18,16 +18,19 @@
     ]
   },
   "dependencies": {
+    "@babel/cli": "^7.4.4",
     "@babel/polyfill": "^7.2.5",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.18.3",
     "compression": "^1.7.3",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
+    "cross-env": "^5.2.0",
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
     "express-jwt": "^5.3.1",
     "jsonwebtoken": "^8.5.1",
+    "nodemon": "^1.19.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-modal": "^3.8.1",
@@ -36,8 +39,7 @@
     "styled-components": "^4.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/node": "^7.0.0",
+    "@babel/core": "^7.4.5",
     "@babel/plugin-proposal-class-properties": "^7.2.3",
     "@babel/plugin-proposal-decorators": "^7.2.3",
     "@babel/plugin-transform-react-constant-elements": "^7.2.0",
@@ -50,7 +52,6 @@
     "babel-plugin-styled-components": "^1.10.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "compression-webpack-plugin": "^2.0.0",
-    "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^16.1.0",
@@ -63,7 +64,6 @@
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^4.6.0",
     "node-sass": "^4.9.3",
-    "nodemon": "^1.19.0",
     "rimraf": "^2.6.2",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
