--- a/.babelrc
+++ b/.babelrc
@@ -7,6 +7,14 @@
       {
         "loose": true
       }
+    ],
+    [
+      "import",
+      {
+        "libraryName": "antd",
+        "libraryDirectory": "es",
+        "style": "css"
+      }
     ]
   ],
   "env": {
