--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.2.5",
+    "antd": "^3.26.0",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.18.3",
     "compression": "^1.7.3",
@@ -47,6 +48,7 @@
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.4",
     "babel-plugin-dynamic-import-node": "^2.1.0",
+    "babel-plugin-import": "^1.13.0",
     "babel-plugin-styled-components": "^1.10.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "compression-webpack-plugin": "^2.0.0",
