--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@babel/plugin-transform-react-inline-elements": "^7.2.0",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
+    "antd-dayjs-webpack-plugin": "0.0.6",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.4",
     "babel-plugin-dynamic-import-node": "^2.1.0",
@@ -56,6 +57,7 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^4.6.0",
+    "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.9.3",
     "nodemon": "^1.19.1",
     "rimraf": "^2.6.2",
