--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,10 @@
 {
-  "presets": [["@babel/preset-env"], "@babel/preset-react"],
+  "presets": [
+    ["@babel/preset-env"],
+    "@babel/preset-react",
+    "@emotion/babel-preset-css-prop"
+  ],
   "plugins": [
-    "babel-plugin-styled-components",
     [
       "@babel/plugin-proposal-class-properties",
       {
