chore: add .eslintrc, .prettierc

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "analyze": "source-map-explorer 'build/static/js/*.js'",
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
+    "format": "prettier --write \"src/**/*.{js,jsx,json,md}\"",
     "start:prod": "cross-env NODE_ENV=production nodemon server"
   },
   "author": "n1ghtdev",
@@ -64,11 +65,13 @@
     "dotenv-expand": "5.1.0",
     "emotion-theming": "^10.0.27",
     "eslint": "^6.6.0",
+    "eslint-config-prettier": "^6.10.0",
     "eslint-config-react-app": "^5.2.0",
     "eslint-loader": "3.0.3",
     "eslint-plugin-flowtype": "4.6.0",
     "eslint-plugin-import": "2.20.0",
     "eslint-plugin-jsx-a11y": "6.2.3",
+    "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "7.18.0",
     "eslint-plugin-react-hooks": "^1.6.1",
     "file-loader": "4.3.0",
