--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "format": "prettier --write \"src/**/*.{js,jsx,json,md}\"",
-    "start:prod": "cross-env NODE_ENV=production nodemon server"
+    "start:prod": "cross-env NODE_ENV=production nodemon server",
+    "heroku-postbuild": "npm install && npm run build"
   },
   "author": "n1ghtdev",
   "license": "ISC",
@@ -34,17 +35,17 @@
     }
   },
   "dependencies": {
-    "@emotion/core": "^10.0.27",
-    "antd": "^4.0.0-rc.3",
     "body-parser": "^1.18.3",
     "compression": "^1.7.3",
     "dotenv": "8.2.0",
-    "express": "^4.16.4",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-router-dom": "^5.1.2"
+    "express": "^4.16.4"
   },
   "devDependencies": {
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-router-dom": "^5.1.2",
+    "@emotion/core": "^10.0.27",
+    "antd": "^4.0.0-rc.3",
     "@babel/core": "7.8.4",
     "@emotion/babel-preset-css-prop": "^10.0.27",
     "@svgr/webpack": "4.3.3",
